--- a/kyc/myapp/templates/myapp/index.html
+++ b/kyc/myapp/templates/myapp/index.html
@@ -1,26 +1,254 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Crop Prediction System</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <h1>Crop Prediction</h1>-->
+<!--    <form method="post" action="{% url 'predict' %}">-->
+<!--        {% csrf_token %}-->
+<!--        <label for="temperature">Temperature:</label>-->
+<!--        <input type="text" id="temperature" name="temperature"><br><br>-->
+
+<!--        <label for="humidity">Humidity:</label>-->
+<!--        <input type="text" id="humidity" name="humidity"><br><br>-->
+
+<!--        <label for="soil_moisture">Soil Moisture:</label>-->
+<!--        <input type="text" id="soil_moisture" name="soil_moisture"><br><br>-->
+
+<!--        <label for="ph_value">Soil pH Value:</label>-->
+<!--        <input type="text" id="ph_value" name="ph_value"><br><br>-->
+
+<!--        <input type="submit" value="Predict">-->
+<!--    </form>-->
+<!--</body>-->
+<!--</html>-->
+
+
+<!doctype html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Crop Prediction System</title>
-</head>
-<body>
-    <h1>Crop Prediction</h1>
-    <form method="post" action="{% url 'predict' %}">
-        {% csrf_token %}
-        <label for="temperature">Temperature:</label>
-        <input type="text" id="temperature" name="temperature"><br><br>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <label for="humidity">Humidity:</label>
-        <input type="text" id="humidity" name="humidity"><br><br>
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-        <label for="soil_moisture">Soil Moisture:</label>
-        <input type="text" id="soil_moisture" name="soil_moisture"><br><br>
+        <title>KYC-Know Your Crop</title>
 
-        <label for="ph_value">Soil pH Value:</label>
-        <input type="text" id="ph_value" name="ph_value"><br><br>
+        <!-- CSS FILES -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
 
-        <input type="submit" value="Predict">
-    </form>
-</body>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+
+        <link href="{% static 'myapp/assets/css/bootstrap.min.css' %}" rel="stylesheet">
+
+        <link href="{% static 'myapp/assets/css/bootstrap-icons.css' %}" rel="stylesheet">
+
+        <link href="{% static 'myapp/assets/css/templatemo-tiya-golf-club.css' %}" rel="stylesheet">
+
+
+    </head>
+
+    <body>
+
+        <main>
+
+            <nav class="navbar navbar-expand-lg">
+                <div class="container">
+                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <img src="{% static 'myapp/assets/images/logo.png' %}" class="navbar-brand-image img-fluid" alt="Tiya Golf Club">
+                        <span class="navbar-brand-text">
+                            KYC
+                            <small>Know Your Crop</small>
+                        </span>
+                    </a>
+
+
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-lg-auto">
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_1">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_2">About</a>
+                            </li>
+                        </ul>
+
+                        <div class="d-none d-lg-block ms-lg-3">
+                            <a class="btn custom-btn custom-border-btn"  href="#section_3" role="button" >Prediction</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+            <section class="hero-section d-flex justify-content-center align-items-center" id="section_1">
+
+                <div class="section-overlay"></div>
+
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3D405B" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"></path></svg>
+
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-12 mb-5 mb-lg-0">
+                            <h2 class="text-white">Welcome to KYC</h2>
+
+                            <h1 class="cd-headline rotate-1 text-white mb-4 pb-2">
+                                <span>An </span>
+                                <span class="cd-words-wrapper">
+                                    <b class="is-visible">IOT</b>
+                                </span>
+                                <span>Based Crop Prediction System </span>
+                            </h1>
+
+                            <div class="custom-btn-group">
+                                <a href="#section_3" class="btn custom-btn smoothscroll me-3">Proceed</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+            </section>
+
+
+            <section class="about-section section-padding" id="section_2">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-12 col-12 text-center">
+                            <h2 class="mb-lg-5 mb-4">About KYC</h2>
+                        </div>
+
+                        <div class="col-lg-5 col-12 me-auto mb-4 mb-lg-0">
+                            <h3 class="mb-3">Know Your Crop</h3>
+
+                            <p> Better soil, Better Future. As a farmer it is necessary to know the nature of soil and which crop is best suitable for the soil. “ KNOW YOUR CROP ” , a soil monitoring system enabled by the IOT allows farmers to predict which crops will grow based on soil factors.</p>
+                        </div>
+
+                        <div class="col-lg-6 col-md-6 col-12 mb-6 mb-lg-0 mb-md-0">
+
+                        <ul>
+                            <li> Our goal is to create a crop predicting tool for temperature, moisture, humidity, and pH-value  are monitored using IOT sensors</li>
+                            <br>
+                            <li> Data from IoT sensors can then  particular soil type. be transferred to a central location for pattern detection, processing and visualization</li>
+                            <br>
+                            <li> This website will help the new farmers to seed the proper crops</li>
+                        </ul>
+
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="section-bg-image">
+                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(255, 255, 255, 1)" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
+
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-6 col-12">
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <svg viewBox="0 0 1265 144" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="rgba(255, 255, 255, 1)" d="M 0 40 C 164 40 164 20 328 20 L 328 20 L 328 0 L 0 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 327 20 C 445.5 20 445.5 89 564 89 L 564 89 L 564 0 L 327 0 Z" stroke-width="0"></path> <path fill="rgba(255, 255, 255, 1)" d="M 563 89 C 724.5 89 724.5 48 886 48 L 886 48 L 886 0 L 563 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 885 48 C 1006.5 48 1006.5 67 1128 67 L 1128 67 L 1128 0 L 885 0 Z" stroke-width="0"></path><path fill="rgba(255, 255, 255, 1)" d="M 1127 67 C 1196 67 1196 0 1265 0 L 1265 0 L 1265 0 L 1127 0 Z" stroke-width="0"></path></svg>
+            </section>
+
+
+            <section class="membership-section section-padding" id="section_3">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-12 col-12 text-center mx-auto mb-lg-5 mb-4">
+                            <h2><span>Crop</span> Prediction</h2>
+                        </div>
+
+
+                        <div class="col-lg-5 col-12 mx-auto">
+                        <h4 class="mb-4 pb-lg-2">Please Fill the Details!!!</h4>
+                            <form method="post" action="{% url 'predict' %}" class="custom-form membership-form shadow-lg" role="form">
+                               {% csrf_token %}
+                                <h4 class="text-white mb-4">Soil Factors</h4>
+
+                                    <div class="form-floating">
+                                        <input type="text" name="temperature" id="temperature" class="form-control" placeholder="Temperature" required="">
+
+                                        <label for="temperature">Temperature</label>
+                                    </div>
+
+                                    <div class="form-floating">
+                                        <input type="text" name="humidity" id="humidity"  class="form-control" placeholder="Humidity" required="">
+
+                                        <label for="humidity">Humidity</label>
+                                    </div>
+
+                                    <div class="form-floating">
+                                        <input type="text" name="soil_moisture" id="soil_moisture" class="form-control" placeholder="Soil Moisture" required="">
+
+                                        <label for="soil_moisture">Soil Moisture Value</label>
+                                    </div>
+
+                                    <div class="form-floating">
+                                        <input type="text" name="ph_value" id="ph_value"  class="form-control" placeholder="Soil pH Value" required="">
+
+                                        <label for="ph_value">Soil pH Value </label>
+                                    </div>
+
+                                    <button type="submit" value="Predict" class="form-control">Submit</button>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+
+        </main>
+
+        <footer class="site-footer">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-lg-6 col-12 me-auto mb-5 mb-lg-0">
+                        <a class="navbar-brand d-flex align-items-center" href="index.html">
+                            <img src="{% static 'myapp/assets/images/logo.png' %}" class="navbar-brand-image img-fluid" alt="">
+                            <span class="navbar-brand-text">
+                                KYC
+                                <small>Know Your Crop</small>
+                            </span>
+                        </a>
+                    </div>
+
+
+
+                </div>
+            </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#81B29A" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+        </footer>
+
+
+        <!-- JAVASCRIPT FILES -->
+        <script src="{% static 'myapp/assets/js/jquery.min.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/jquery.sticky.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/click-scroll.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/animated-headline.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/modernizr.js' %}"></script>
+        <script src="{% static 'myapp/assets/js/custom.js' %}"></script>
+
+    </body>
 </html>
