--- a/kyc/myapp/templates/myapp/index.html
+++ b/kyc/myapp/templates/myapp/index.html
@@ -60,6 +60,38 @@
              padding: 20px;
              margin-top: 20px;
           }
+
+          .loader {
+             display: none;
+             position: fixed;
+             z-index: 9999;
+             top: 0;
+             left: 0;
+             width: 100%;
+             height: 100%;
+             background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
+             text-align: center;
+          }
+
+          .loader:after {
+             content: '';
+             position: absolute;
+             top: 50%;
+             left: 50%;
+             width: 60px;
+             height: 60px;
+             margin: -30px 0 0 -30px;
+             border: 6px solid #f3f3f3; /* Light grey border */
+             border-top: 6px solid #3498db; /* Blue border on top */
+             border-radius: 50%;
+             animation: spin 1s linear infinite; /* Animation */
+          }
+
+          @keyframes spin {
+             0% { transform: rotate(0deg); }
+             100% { transform: rotate(360deg); }
+          }
+
        </style>
 
 
@@ -254,12 +286,15 @@
 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#81B29A" fill-opacity="1" d="M0,224L34.3,192C68.6,160,137,96,206,90.7C274.3,85,343,139,411,144C480,149,549,107,617,122.7C685.7,139,754,213,823,240C891.4,267,960,245,1029,224C1097.1,203,1166,181,1234,160C1302.9,139,1371,117,1406,106.7L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
         </footer>
-
+<div id="loader" class="loader"></div>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const form = document.getElementById('predict-form');
         form.addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent form submission
+
+            // Show loader
+            document.getElementById('loader').style.display = 'block';
 
             const formData = new FormData(form);
 
@@ -280,9 +315,15 @@
                         <p class="text-white">${data.predicted_crop}</p>
                     </div>
                 `;
+
+                // Hide loader
+                document.getElementById('loader').style.display = 'none';
             })
             .catch(error => {
                 console.error('Error:', error);
+
+                // Hide loader in case of error
+                document.getElementById('loader').style.display = 'none';
             });
         });
     });
